--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,13 @@ author: Muhammad Ahmed <mahmed8003@gmail.com>
 homepage: https://github.com/mahmed8003/stripe_api
 
 environment:
-  sdk: ">=2.0.0-dev.61.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  http: "^0.12.0"
+  http: "^0.13.3"
 
 dev_dependencies:
   flutter_test:
